# RendED

./: CMakeLists.txt  LICENSE
include/core/: matrix4x4.hpp  triangle.hpp  vector2.hpp  vector3.hpp  vector4.hpp
include/object/: object.hpp
include/render/: object_projection.hpp
src/: main.cpp
src/core/: matrix4.hpp  mesh.hpp  triangle.hpp  vector2.hpp  vector3.hpp
src/loaders/: obj_loader.cpp  obj_loader.hpp
src/object/: object.cpp
src/render/: object_projection.cpp
tests/: test1.cpp
