cmake_minimum_required(VERSION 3.10)
project(3dEngine VERSION 1.0 LANGUAGES CXX)

# Set common C++ standard and options
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON) # Useful for IDEs like VS Code

# Add source directory (e.g., to build core libraries)
#add_subdirectory(src)

# Add tests directory
#add_subdirectory(tests)